added build tasks (gulp)

--- a/public/index.html
+++ b/public/index.html
@@ -64,17 +64,10 @@
     </div>
 
     <!--Vendor Packages-->
-    <script type="text/javascript" src="vendor/jquery.min.js"></script>
-    <script type="text/javascript" src="vendor/bootstrap.min.js"></script>
-    <script type="text/javascript" src="vendor/angular.min.js"></script>
-    <script type="text/javascript" src="vendor/angular-bootstrap-multiselect.min.js"></script>
-
+    <script type="text/javascript" src="js/vendor.min.js"></script>
 
     <!--Application Code-->
-    <script type="text/javascript" src="js/app.module.js"></script>
-    <script type="text/javascript" src="js/app.constants.js"></script>
-    <script type="text/javascript" src="js/main/Main.controller.js"></script>
-    <script type="text/javascript" src="js/main/Main.service.js"></script>
+    <script type="text/javascript" src="js/app.min.js"></script>
 
 </body>
 </html>
