--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html ng-app="app" ng-cloak>
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="utf-8">
-    <title>Angular Getter / Setter</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/vendor.min.css">
-    <link rel="stylesheet" href="css/app.min.css">
-    <!--[if lt IE 9]>
-    <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link rel="shortcut icon" href="">
-</head>
-<body ng-controller="MainCtrl as $ctrl">
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="utf-8">
+        <title>Angular Append Data</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <div class="container">
+        <!--Vendor Packages-->
+        <link rel="stylesheet" href="css/vendor.min.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+
+        <!--Application Code-->
+        <link rel="stylesheet" href="css/app.min.css">
+
+        <link rel="shortcut icon" href="">
+    </head>
+
+    <body>
+
+    <!--Application Container-->
+    <div class="container" ng-controller="MainCtrl as $ctrl">
         <h2>{{ $ctrl.appName() }}</h2>
 
         <table class="table table-bordered">
